--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,17 +15,12 @@
 
       <div class="pull-right user-info">
         <% if current_user %>
-          Hello <%= link_to (current_user.name || current_user.email), current_user %>!
-          <% link_to edit_user_registration_path,  class: 'btn btn-primary btn-sm' do %>
-            <span class="glyphicon glyphicon-user"></span>
+          Hello <%= link_to current_user.email %>!<%= link_to "Edit", edit_user_registration_path %>
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to "Sign In", new_user_session_path %> or
+          <%= link_to "Sign Up", new_user_registration_path %>
         <% end %>
-        <% link_to destroy_user_session_path, method: :delete, clas: 'btn btn-primary btn-sm' do %>
-          <span class="glyphicon glyphicon-log-out"></span>
-        <% end %>
-      <% else %>
-        <%= link_to "Sign In", new_user_session_path %> or
-        <%= link to "Sign Up", new_user_registration_path %>
-      <% end %>
   </ul>
 
   <% if flash[:notice] %>
