--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -3,7 +3,7 @@
   <div class="media">
     <div class="media-body">
       <h4 class="media-heading">
-        <%= link_to wiki.title, wiki %>
+        <%= link_to wiki.title, user_wiki_path(current_user, wiki.id) %>
       </h4>
     </div>
   </div>
