--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -9,10 +9,14 @@
     </ul>
   </div>
   <div class="col-md-8">
-    <%= form_for @wiki do |f| %>
+    <%= form_for [current_user, @wiki] do |f| %>
       <div class="form-group">
         <%= f.label :title %>
-        <%= f.text_area :body. rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
+        <%= f.text_field :title, rows: 8, class: 'form-control', placeholder: "Enter wiki title" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :body %>
+        <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
       </div>
       <div class="form-group">
         <%= f.submit "Save", class: 'btn btn-success' %>
