--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @wiki.title %></h1>
 
-<%= link_to "Edit", edit_post_path(@post), class: 'btn btn-success' %>
+<%= link_to "Edit", edit_user_wiki_path(current_user, @wiki), class: 'btn btn-success' %>
+<%= link_to "Delete", [current_user, @wiki], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
 
-<p><% @wiki.body %></p>
+
+<p><%= @wiki.body %></p>
