--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
     </div>
   <% elsif flash[:alert] %>
     <div class="alert alert-warning">
-      <button type="button" class="close" data-dismiss="alert">&time;</button>
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
       <%= flash[:alert] %>
     </div>
   <% end %>
