--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Wikis</h1>
+<h1>My Wikis</h1>
+<% if policy(Wiki.new).create? %>
+  <%= link_to "New Post", new_user_wiki_path, class: 'btn btn-success' %>
+<% end %>
 <% @wikis.each do |wiki| %>
   <div class="media">
     <div class="media-body">
