--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -9,7 +9,7 @@
     </ul>
   </div>
   <div class="col-md-8">
-    <%= form_for [current_user, @wiki] do |f| %>
+    <%= form_for @wiki do |f| %>
       <div class="form-group">
         <%= f.label :title %>
         <%= f.text_field :title, class: 'form-control', placeholder: "Enter wiki title" %>
