--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,8 +1,10 @@
 <h1><%= @wiki.title %></h1>
 <% if policy(@wiki).edit? %>
-  <%= link_to "Edit", edit_user_wiki_path(current_user, @wiki), class: 'btn btn-success' %>
+  <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
 <% end %>
-<%= link_to "Delete", [current_user, @wiki], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+<% if policy(@wiki).destroy? %>
+  <%= link_to "Delete", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+<% end %>
 
 
 <p><%= @wiki.body %></p>
