--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Welcome to Blocipedia</h1>
-<p id="index-title">This is the home page for Blocipedia</p>
+<br>
+<div class="jumbotron">
+
+  <h1>Welcome to Blocipedia</h1>
+  <p>Blocipedia is .......</p>
+  <p>Create and share wikis!</p>
+  <p> 
+      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+  </p>
+</div>
+
+<div class="row">
+  <div class="col-md-4">
+    <h2>Create as many wikis as you like!</h2>
+        <%= link_to "Free Plan", new_user_registration_path, class: 'btn btn-primary' %>
+  </div>
+  <div class="col-md-4">
+    <h2>Upgrade to the Premium Plan to reate private wikis</h2>
+        <%= link_to "Premium Plan", new_charge_path, class: 'btn btn-primary' %>
+  </div>
+</div>
+
