--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,4 +1,4 @@
-<h1>My Wikis</h1>
+<h1>Wikis</h1>
 <% if policy(Wiki.new).create? %>
   <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
 <% end %>
