--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -18,9 +18,7 @@
         <%= f.label :body %>
         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
       </div>
-      <div>
-        <% render 'wikis/form' %>
-      </div>
+        <% render "wikis/form" %>     
       <div class="form-group">
         <%= f.submit "Save", class: 'btn btn-success' %>
       </div>
