--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -48,11 +48,15 @@
       </div>
     <% end %>
 
+    <%= link_to "Unsubscribe", charge_path(current_user), method: :delete, class: 'btn btn-danger' %> from the Premium Plan
+
     <h3>Cancel my account</h3>
     <div class="form-group">
       <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
     </div>
   </div>
 </div>
+
+
 
 <%= link_to "Back", :back %>
