--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,7 +1,10 @@
-<% if current_user.role == 'admin' || current_user.role == 'premium' %>
-    <div class="form-group">
-      <%= f.label :private, class: 'checkbox' do %>
-      <%= f.check_box :private %> Private wiki
-    <% end %>
-    </div>
+<%= form_for @wiki do |f| %>
+
+  <% if current_user.role == 'admin' || current_user.role == 'premium' %>
+      <div class="form-group">
+        <%= f.label :private, class: 'checkbox' do %>
+        <%= f.check_box :private %> Private wiki
+      <% end %>
+      </div>
+  <% end %>
 <% end %>
