still no progress on adding collaborators

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>Wiki Users</h1>
+<% @users.each do |user| %>
+  <p><%= link_to user.name, user %></p>
+<% end %>
+
+
+<!-- the users#index view needs to have option to add to wiki as collaborators.  something like <% if  current_user.premium? %>
+      <div class="form-group">
+        <%= f.label :collaborator, class: 'checkbox' do %>
+        <%= f.check_box :collaborator %> Collaborator
+        <% end %>
+      </div>
+    <% end %> -->
