still working on adding collaborators

--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -10,8 +10,7 @@
   </div>
   <%= render partial: 'form', locals: { wiki: @wiki } %>
 </div>
-
-<%= @wiki.collaborators << (:user_id, :wiki_id) %>
+  <%= render partial: 'wikis/collaborator', locals: { wiki: @wiki } %>
 
 <!-- put a add_collobarotors button here that links to an index of users.  
 put a button to edit collaborators -->
