--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -21,11 +21,11 @@
     <div class="form-group">
       <%= f.submit "Save", class: 'btn btn-success' %>
     </div>
-    <% if  current_user.premium? %>
-      <div class="form-group">
-        <%= f.label :private, class: 'checkbox' do %>
-        <%= f.check_box :private %> Private wiki
-        <% end %>
+    <% if current_user.admin? || current_user.premium? %>
+    <div class="form-group">
+      <%= f.check_box :private %> Private wiki
+      <%= f.label :private, calss: 'checkbox' do %>
+      <% end %>
       </div>
     <% end %>
   <% end %>
