problems with policy

--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Edit Wiki</h1>
 
 <%= form_for @wiki do |f| %>
-  <input type="hidden" name="col=ids" id="col-ids">
+  <input type="hidden" name="col-ids" id="col-ids">
 
   <div class="form-group">
     <%= f.label :title %>
