--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -21,7 +21,7 @@
     <div class="form-group">
       <%= f.submit "Save", class: 'btn btn-success' %>
     </div>
-    <% if current_user.admin? || current_user.premium? %>
+    <% if current_user.role == 'admin' || current_user.role == 'premium' %>
     <div class="form-group">
       <%= f.check_box :private %> Private wiki
       <%= f.label :private, calss: 'checkbox' do %>
