--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -8,6 +8,10 @@
       <h4 class="media-heading">
         <%= link_to wiki.title, wiki_path(wiki.id) %>
       </h4>
+      <small>
+    submitted <%= time_ago_in_words(wiki.created_at) %> ago by 
+    <%= wiki.user_id %><br>
+      </small>
  
     </div>
   </div>
