--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -8,28 +8,7 @@
       <li>write more guidelines here</li>
     </ul>
   </div>
-  <div class="col-md-8">
-    <%= form_for @wiki do |f| %>
-      <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, rows: 8, class: 'form-control', placeholder: "Enter wiki title" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :body %>
-        <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
-      </div>
-      <div class="form-group">
-        <%= f.submit "Save", class: 'btn btn-success' %>
-      </div>
-      <% if current_user.premium? %>
-        <div class="form-group">
-          <%= f.label :private, class: 'checkbox' do %>
-          <%= f.check_box :private %> Private wiki
-          <% end %>
-        </div>
-      <% end %>
-    </div>
-  </div>
-<% end %>
+</div>
+<div>
   <%= render partial: 'form', locals: { wiki: @wiki } %>
 </div>
