--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,4 +1,10 @@
 <h1><%= markdown_to_html @wiki.title %></h1>
+<p><%= markdown_to_html @wiki.body %></p>
+<small>
+  submitted <%= time_ago_in_words(@wiki.created_at) %> ago by 
+  <%= @wiki.user_id %><br>
+</small>
+
 <% if policy(@wiki).edit? %>
   <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
 <% end %>
@@ -8,4 +14,4 @@
 
 
 
-<p><%= markdown_to_html @wiki.body %></p>
+
