--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -48,7 +48,8 @@
       </div>
     <% end %>
 
-    <%= link_to "Unsubscribe", charge_path(current_user), method: :delete, class: 'btn btn-danger' %> from the Premium Plan
+    <%= link_to "Unsubscribe", charge_path(current_user), method: :delete, class: 'btn btn-danger', data: { confirm: "Are you sure?  Unsubscribing will make your private wikis public" } %> from the Premium Plan
+
 
     <h3>Cancel my account</h3>
     <div class="form-group">
