add epic editor

--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -10,6 +10,49 @@
         </ul>
       </div>
     <% end %>
+
+    <!-- <div id="epiceditor"><textarea id="my-edit-area"></textarea></div>
+    <script src ="epiceditor.min.js"></script>
+    var editor = new EpicEditor().load();
+
+    var opts = {
+    container: 'epiceditor',
+    textarea: null,
+    basePath: 'epiceditor',
+    clientSideStorage: true,
+    localStorageName: 'epiceditor',
+    useNatieFullscreen: true,
+    parser: marked,
+    file: {
+      name: 'epiceditor',
+      defaultContent: '', 
+      autoSave: 100
+    },
+    theme: { 
+      base: '/themes/base/epiceditor.css',
+      preview: '/themes/preview/preview-dark.css',
+      editor: '/themes/editor/epic-dark.css'
+    },
+    button: {
+      preview: true,
+      fullscreen: true,
+      bar: "auto"
+    },
+    focusOnLoad: false,
+    shortcut: {
+      modifier: 18,
+      fullscreen: 70,
+      preview: 80
+    },
+    string: {
+      togglePreview: 'Toggle Preview Mode',
+      toggleEdit: 'Toggle Edit Mode',
+      toggleFullscreen: 'Enter Fullscreen'
+    },
+    autogrow: false
+  }
+  var editor = new EpicEditor(opts); -->
+
     <%= form_group_tag(wiki.errors[:title]) do %>
       <%= f.label :title %>
       <%= f.text_field :title, rows: 8, class: 'form-control', placeholder: "Enter wiki title" %>
