trying to add wiki to profile

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -2,7 +2,7 @@
 <p><%= markdown_to_html @wiki.body %></p>
 <small>
   submitted <%= time_ago_in_words(@wiki.created_at) %> ago by 
-  <%= @wiki.user_id %><br>
+  <%= @wiki.authors %><br>
 </small>
 
 <% if policy(@wiki).edit? %>
