add wiki partial

--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -2,17 +2,4 @@
 <% if policy(Wiki.new).create? %>
   <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
 <% end %>
-<% @wikis.each do |wiki| %>
-  <div class="media">
-    <div class="media-body">
-      <h4 class="media-heading">
-        <%= link_to wiki.title, wiki_path(wiki.id) %>
-      </h4>
-      <small>
-    submitted <%= time_ago_in_words(wiki.created_at) %> ago by 
-    <%= wiki.get_owner %><br>
-      </small>
- 
-    </div>
-  </div>
-<% end %>
+<%= render partial: 'wikis/wiki' %>
