--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
   <ul class="nav nav-tabs">
-      <li><%= link_to "Blocipedia", root_path %></li>
+      <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Wikis", wikis_path %></li>
       <li><%= link_to "Users", users_path %></li>
@@ -18,8 +18,8 @@
       <div class="pull-right user-info">
         <% if current_user %>
           Hello <%= link_to current_user.name, current_user %>   
-          |<%= link_to "Edit", edit_user_registration_path %> or
-          <%= link_to "Sign out", destroy_user_session_path, method: :delete %>|
+          | <%= link_to "Edit", edit_user_registration_path %> or
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete %> 
         <% else %>
           <%= link_to "Sign In", new_user_session_path %> or
           <%= link_to "Sign Up", new_user_registration_path %>
