--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,3 @@
 <h1>My Wikis</h1>
 
-<%= link_to "Premium", new_charge_path, class: 'btn btn-primary' %> 
-<p>Upgrade to create private wikis!</p>
-<p>
-  <% @wikis.each do |wiki| %>
-  <%= link_to wiki.title, wiki %>
-</p>
-<% end %>
+<%= render partial: 'wikis/wiki' %>
