--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -18,15 +18,15 @@
       <%= f.label :body %>
       <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
     <% end %>
+    <% if current_user.role == 'admin' || current_user.role == 'premium' %>
+    <div class="form-group">
+      <%= f.check_box :private %> Private Wiki?
+      <%= f.label :private, class: 'checkbox' do %>
+      <% end %>
+    </div>
+    <% end %>
     <div class="form-group">
       <%= f.submit "Save", class: 'btn btn-success' %>
     </div>
-    <% if current_user.role == 'admin' || current_user.role == 'premium' %>
-    <div class="form-group">
-      <%= f.check_box :private %> Private wiki
-      <%= f.label :private, class: 'checkbox' do %>
-      <% end %>
-      </div>
-    <% end %>
   <% end %>
 </div>
