add a link to wikipedia

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,4 @@
 <h1>About Blocipedia</h1>
 <p>Created by : </p>
+
+<h3>What is a <%= link_to Wiki, src="https://en.wikipedia.org/wiki/Wiki" %>?</h3>
