--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,16 +5,16 @@
   <p>Blocipedia is .......</p>
   <p>Create and share wikis!</p>
   <p> 
-      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today for FREE!
   </p>
 </div>
 
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-6">
     <h2>Create as many wikis as you like!</h2>
         <%= link_to "Free Plan", new_user_registration_path, class: 'btn btn-primary' %>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-6">
     <h2>Upgrade to the Premium Plan to reate private wikis</h2>
         <%= link_to "Premium Plan", new_charge_path, class: 'btn btn-primary' %>
   </div>
