--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,12 @@
 
 body {
   font-family: 'Source Code Pro';
+  background: #111;
+  color: #bbbbbb;
+}
+.jumbotron {
+  background: #aaaa99;
+  color: #111
 }
 
 .user-info {
