--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,7 @@
         <%= link_to "Free Plan", new_user_registration_path, class: 'btn btn-primary' %>
   </div>
   <div class="col-md-6">
-    <h2>Upgrade to the Premium Plan to reate private wikis</h2>
+    <h2>Upgrade to the Premium Plan to create private wikis</h2>
         <%= link_to "Premium Plan", new_charge_path, class: 'btn btn-primary' %>
   </div>
 </div>
