add collaboration-gear image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,10 +18,10 @@
 
 body {
   font-family: 'Source Code Pro';
-  background-image: image-url('collaboration.jpg');
-  background-repeat: no-repeat;
+  background-image: image-url('collaboration-gears.jpg');
+  background-repeat: repeat;
   background-size: 100%;
-  color: #aaaa99;
+  color: #111;
 }
 .jumbotron {
   background: #aaaa99;
