--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -30,3 +30,9 @@
     </div>
   <% end %>
 </div>
+
+</textarea></div>
+
+<script src="epiceditor.min.js">
+var editor = new EpicEditor().load();
+</script>
