add epic editor and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,12 @@
 
 <%= yield %>
 </div>
-
+</div>
+<div id='footer'>
+  <div class="container">
+    <p>Something</p>
+  </div>
+</div>
 </body>
 
 </html>
