--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,15 +15,17 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import 'base/epiceditor';
 
 body {
   font-family: 'Source Code Pro';
-  text-align: center;
   background-image: image-url('collaboration-gears.jpg');
   background-repeat: repeat;
   background-size: 100%;
   color: #111;
+  margin-bottom: 60px;
 }
+
 h1 {
   font-size: 4em;
 }
@@ -39,3 +41,16 @@ h4 {
   margin-top: 5px;
 }
 
+#footer {
+  background-color: #f5f5f5;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
