--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <br>
-<div>
+<div class="text-center">
 
   <h1>Welcome to Blocipedia</h1>
   <h2>Blocipedia is .......</h2>
@@ -10,7 +10,7 @@
     
 </div>
 
-<div class="row">
+<div class="row text-center">
   <div class="col-md-6">
     <h4>Create as many wikis as you like!</h4>
         <%= link_to "Free Plan", new_user_registration_path, class: 'btn btn-primary' %>
