--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -16,7 +16,9 @@
     <% end %>
     <%= form_group_tag(wiki.errors[:body]) do %>
       <%= f.label :body %>
-      <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
+      <div id='epiceditor'>
+        <%= f.text_area :body, rows: 8, id: 'body', class: 'form-control', placeholder: "Enter post body" %>
+    </div>
     <% end %>
     <% if current_user.role == 'admin' || current_user.role == 'premium' %>
     <div class="form-group">
@@ -31,8 +33,14 @@
   <% end %>
 </div>
 
-</textarea></div>
 
-<script src="epiceditor.min.js">
-var editor = new EpicEditor().load();
+<script>
+  defaults = {
+    container: 'epiceditor',
+    basePath: '/assets',
+    textarea: 'body',
+    clientSideStorage: true,
+    localStorageName: 'epiceditor'
+  }
+  var editor = new EpicEditor().load();
 </script>
