--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,4 +1,5 @@
 <h1>About Blocipedia</h1>
-<p>Created by : </p>
+<p>Re-created by:
+</br> Jamaleh with a great deal of sweat and help from my mentor at <%= link_to "Bloc", "https://www.bloc.io" %>.</p>
 
 <h3>What is a <%= link_to Wiki, src="https://en.wikipedia.org/wiki/Wiki" %>?</h3>
