--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,8 @@
 </div>
 <div id='footer'>
   <div class="container">
-    <p>Something</p>
+  </br>
+    <p class="text-center">Powered by <span class="glyphicon glyphicon-heart"></span> 2015</p>
   </div>
 </div>
 </body>
