--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -18,29 +18,30 @@
       <%= f.label :body %>
       <div id='epiceditor'>
         <%= f.text_area :body, rows: 8, id: 'body', class: 'form-control', placeholder: "Enter post body" %>
-    </div>
+      </div>
     <% end %>
     <% if current_user.role == 'admin' || current_user.role == 'premium' %>
-    <div class="form-group">
-      <%= f.check_box :private %> Private Wiki?
-      <%= f.label :private, class: 'checkbox' do %>
+      <%= form_group_tag(wiki.errors[:private]) do %>
+        <%= f.label :private, class: 'checkbox' do %>
+          <%= f.check_box :private %> Private Wiki?
+        <% end %>
       <% end %>
-    </div>
     <% end %>
     <div class="form-group">
       <%= f.submit "Save", class: 'btn btn-success' %>
     </div>
   <% end %>
-</div>
+</div> <!-- closing col-md-8 -->
 
 
 <script>
-  defaults = {
-    container: 'epiceditor',
-    basePath: '/assets',
-    textarea: 'body',
-    clientSideStorage: true,
-    localStorageName: 'epiceditor'
-  }
-  var editor = new EpicEditor().load();
+
+  // defaults = {
+  //   container: 'epiceditor',
+  //   basePath: '/assets',
+  //   textarea: 'body',
+  //   clientSideStorage: true,
+  //   localStorageName: 'epiceditor'
+  // }
+  // var editor = new EpicEditor().load();
 </script>
