--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
 <h3>Wikis by: <%= @user.name %></h3>
 
 <%= render partial: 'wikis/wiki' %>
-<%= will_paginate @wiki %>
+<%= will_paginate @wikis %>
