--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,18 +1,29 @@
 <h1>Edit Wiki</h1>
 
 <%= form_for @wiki do |f| %>
+  <div class="col-md-8">
+    <% if @wiki.errors.any? %>
+    <div class="alert alert-danger">
+      <h4>There are <%= pluralize(@wiki.errors.count, "error") %>.</h4>
+      <ul>
+        <% @wiki.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+    <% end %>
+
   <input type="hidden" name="col-ids" id="col-ids">
-
-  <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :body %>
-    <%= f.text_area :body, rows: 12, class: 'form-control' %>
-  </div>
-
+<%= form_group_tag(@wiki.errors[:title]) do %>
+      <%= f.label :title %>
+      <%= f.text_field :title, rows: 8, class: 'form-control', placeholder: "Enter wiki title" %>
+    <% end %>
+    <%= form_group_tag(@wiki.errors[:body]) do %>
+      <%= f.label :body %>
+      <div id='epiceditor'>
+        <%= f.text_area :body, rows: 8, id: 'body', class: 'form-control', placeholder: "Enter post body" %>
+      </div>
+    <% end %>
   <div class="form-group">
     <%= f.submit "Update", class: 'btn btn-success', id: 'add-collaborators' %>
   </div>
