Update edit registration

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,7 +38,7 @@
     <% end %>
 
     <h3>Edit personal information</h3>
-    <%= form_for(resource_name) do |f| %>
+    <%= form_for(current_user) do |f| %>
       <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
