--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,10 +23,9 @@
       <div class="form-group">
         <%= f.submit "Sign up", class: 'btn btn-success' %>
       </div>
-      <div class="form-gorup">
+      <div class="form-group">
         <%= render "devise/shared/links" %>
       </div>
     <% end %>
   </div>
 </div>
-
