--- a/app/views/wikis/_wiki.html.erb
+++ b/app/views/wikis/_wiki.html.erb
@@ -5,10 +5,10 @@
         <%= link_to wiki.title, wiki %>
       </h4>
       <small>
-    submitted <%= time_ago_in_words(wiki.created_at) %> ago by 
-    <%= wiki.get_owner %><br>
+    submitted <%= time_ago_in_words(wiki.created_at) %> ago by
+    <%= wiki.get_owner %><br />
       </small>
- 
+
     </div>
   </div>
 <% end %>
