--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,6 +1,10 @@
-<h1>Wikis</h1>
-<% if policy(Wiki.new).create? %>
-  <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
-<% end %>
-<%= render partial: 'wikis/wiki' %>
-<%= will_paginate @wiki %>
+<div class="row text-center">
+  <div class="col-md-6 col-md-offset-3">
+    <h1>Wikis</h1>
+    <% if policy(Wiki.new).create? %>
+      <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
+    <% end %>
+    <%= render partial: 'wikis/wiki' %>
+    <%= will_paginate @wiki %>
+  </div>
+</div>
