--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,19 +1,18 @@
-<h2><%= markdown_to_html @wiki.title %></h2>
-<p><%= markdown_to_html @wiki.body %></p>
-<small>
-  submitted <%= time_ago_in_words(@wiki.created_at) %> ago by 
-  <%= @wiki.get_owner %><br>
-  <%= "Collaborators: #{@wiki.authors}" if @wiki.collaborators.count > 0 %><br>
+<div class="row">
+  <div class="col-md-9 col-md-offset-3">
+    <h2><%= markdown_to_html @wiki.title %></h2>
+    <p><%= markdown_to_html @wiki.body %></p>
+      <small>
+        submitted <%= time_ago_in_words(@wiki.created_at) %> ago by
+        <%= @wiki.get_owner %><br />
+        <%= "Collaborators: #{@wiki.authors}" if @wiki.collaborators.count > 0 %><br />
+      </small>
 
-</small>
-
-<% if policy(@wiki).edit? %>
-  <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-<% end %>
-<% if policy(@wiki).destroy? %>
-  <%= link_to "Delete", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
-<% end %>
-
-
-
-
+    <% if policy(@wiki).edit? %>
+      <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+    <% end %>
+    <% if policy(@wiki).destroy? %>
+      <%= link_to "Delete", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+    <% end %>
+  </div>
+</div>
